--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ p {
     font-family: "Book Antiqua", serif;
 }
 body{
-    background-color: #808996;
+    background-color: rosybrown;
 }
 .left-par{
     display: flex;
