--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+body{
+    background-color: lightsteelblue;
+}
 h1 {
     font-family: "Book Antiqua", serif;
     text-align: center;
@@ -5,9 +8,7 @@ h1 {
 p {
     font-family: "Book Antiqua", serif;
 }
-body{
-    background-color: rosybrown;
-}
+
 .left-par{
     display: flex;
     width: 200px;
