--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
-body{
-    background-color: lightsteelblue;
-}
+/*body{*/
+/*    background-color: lightsteelblue;*/
+/*}*/
 h1 {
     font-family: "Book Antiqua", serif;
     text-align: center;
