--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
-/*body{*/
-/*    background-color: lightsteelblue;*/
-/*}*/
+body{
+    background-color: lightsteelblue;
+}
 h1 {
     font-family: "Book Antiqua", serif;
     text-align: center;
@@ -11,5 +11,7 @@ p {
 
 .left-par{
     display: flex;
-    width: 300px;
+    width: 500px;
+    margin: 10px;
+    margin-left: 50px;
 }
