try align differnet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,8 +27,8 @@ p {
 }
 #flowers{
     margin: 25px;
-    height: 30px;
-    width: 30px;
+    /*height: 30px;*/
+    /*width: 30px;*/
     align-content: center;
 }
 .pics{
