--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ p {
     padding: 10px;
     border-radius: 10px;
 }
-#flowers{
+.flowers{
     display: flex;
     margin: 25px;
     flex-direction: row;
