--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,6 +45,11 @@ a:hover{
 
 #patchOld{
     border-radius: 10px;
-     width:75px;
-     height:100px;
+     width:225px;
+     height:300px;
+}
+#patchYoung{
+    border-radius: 10px;
+     width:225px;
+     height:300px;
 }
